--- a/part-4/blog-list-backend/package.json
+++ b/part-4/blog-list-backend/package.json
@@ -3,6 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "lodash": "^4.17.21",
+    "lodash.countby": "^4.6.0",
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0"
   },
@@ -18,7 +20,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "author": "",
   "license": "ISC",
